Further development on frontend-backend interface
