# src/RKTimeTrack.Application/Models/TimeTrackingYearMetadata.cs
@@ -1,0 +1,6 @@
+﻿namespace RKTimeTrack.Application.Models;
+
+public class TimeTrackingYearMetadata(int maxWeekNumber)
+{
+    public int MaxWeekNumber { get; } = maxWeekNumber;
+}
